--- a/LANN-Party_web/.classpath
+++ b/LANN-Party_web/.classpath
@@ -15,5 +15,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/net/people/classes/Java/mysql-connector-java-3.1.10-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
