Moved source code into LANNPartySource package, fixed errors

--- a/LANN-Party_web/.project
+++ b/LANN-Party_web/.project
@@ -3,6 +3,8 @@
 	<name>LANN-Party_web</name>
 	<comment></comment>
 	<projects>
+		<project>LANN-Party_Project</project>
+		<project>Servers</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
